--- a/app/src/main/res/layout/event_organized.xml
+++ b/app/src/main/res/layout/event_organized.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <!-- "Open Events" TextView -->
+    <!-- "Organized Events" TextView -->
     <TextView
         android:id="@+id/textViewOpenEvents"
         android:layout_width="wrap_content"
@@ -17,7 +17,25 @@
         app:layout_constraintEnd_toEndOf="parent"
         android:padding="16dp"/>
 
-    <!-- Your existing content goes here -->
+    <!-- "Create New Event" Button -->
+    <Button
+        android:id="@+id/btnCreateEvent"
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginEnd="20dp"
+        android:text="Create New Event"
+        app:layout_constraintTop_toBottomOf="@id/textViewOpenEvents"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- List of Created Events -->
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/listCreatedEvents"
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toBottomOf="@id/btnCreateEvent"
+        app:layout_constraintBottom_toTopOf="@id/bottom_navigation" />
 
     <!-- Bottom Navigation View -->
     <com.google.android.material.bottomnavigation.BottomNavigationView
