--- a/app/src/main/res/layout/event_uploadposter.xml
+++ b/app/src/main/res/layout/event_uploadposter.xml
@@ -5,37 +5,47 @@
     android:orientation="vertical">
 
     <LinearLayout
+        android:id="@+id/upload_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal">
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal">
+
+            <Button
+                android:id="@+id/eventPoster_back"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:text="Back" />
+        </LinearLayout>
+
+        <ImageView
+            android:id="@+id/eventPosterImage"
+            android:layout_width="match_parent"
+            android:layout_height="494dp"
+            android:layout_weight="1"
+            android:padding="0dp" />
 
         <Button
-            android:id="@+id/eventPoster_back"
-            android:layout_width="wrap_content"
+            android:id="@+id/uploadPosterButton"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_weight="0"
-            android:text="Back" />
+            android:layout_margin="30dp"
+            android:text="Upload Poster" />
+
+        <Button
+            android:id="@+id/event_create"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="30dp"
+            android:text="Create Event"
+            android:visibility="gone" />
+
+
     </LinearLayout>
 
-    <ImageView
-        android:id="@+id/eventPosterImage"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:padding="0dp" />
-
-    <Button
-        android:id="@+id/uploadPosterButton"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="Upload Poster" />
-
-    <Button
-        android:id="@+id/event_posternext"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="30dp"
-        android:text="next"
-        android:visibility="gone" />
 </LinearLayout>
