--- a/app/src/main/res/layout/admin_event_card.xml
+++ b/app/src/main/res/layout/admin_event_card.xml
@@ -16,16 +16,26 @@
             android:layout_height="match_parent">
 
             <TextView
+                android:id="@+id/admin_event_card_event_name"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="60dp"
                 android:fontFamily="@font/coustard"
                 android:text="Event Name"
+                android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <ImageView
-                android:id="@+id/imageView3"
+                android:id="@+id/admin_event_card_menu"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/triple_dot" />
+
+            <ImageView
+                android:id="@+id/admin_event_card_poster"
                 android:layout_width="wrap_content"
                 android:layout_height="200dp"
                 android:layout_marginTop="20dp"
@@ -34,7 +44,7 @@
                 app:srcCompat="@drawable/pizzanight" />
 
             <TextView
-                android:id="@+id/textView17"
+                android:id="@+id/admin_event_card_event_id"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="68dp"
@@ -43,10 +53,10 @@
                 android:textColor="#8A8A8A"
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/imageView3" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_poster" />
 
             <TextView
-                android:id="@+id/textView10"
+                android:id="@+id/admin_event_card_event_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="56dp"
@@ -54,10 +64,10 @@
                 android:fontFamily="@font/coustard"
                 android:text="Event Date"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView17" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_id" />
 
             <TextView
-                android:id="@+id/textView11"
+                android:id="@+id/admin_event_card_event_location"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="64dp"
@@ -65,63 +75,63 @@
                 android:fontFamily="@font/coustard"
                 android:text="Location"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView10" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_date" />
 
             <TextView
-                android:id="@+id/textView12"
+                android:id="@+id/admin_event_card_registered"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/coustard"
                 android:text="Registered:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_location" />
 
             <TextView
-                android:id="@+id/textView13"
+                android:id="@+id/admin_event_card_attending"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:fontFamily="@font/coustard"
                 android:text="Attending:"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView12" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_registered" />
 
             <TextView
-                android:id="@+id/textView14"
+                android:id="@+id/admin_event_card_registered_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="12dp"
                 android:text="0000"
-                app:layout_constraintStart_toEndOf="@+id/textView12"
-                app:layout_constraintTop_toBottomOf="@+id/textView11" />
+                app:layout_constraintStart_toEndOf="@+id/admin_event_card_registered"
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_location" />
 
             <TextView
-                android:id="@+id/textView15"
+                android:id="@+id/admin_event_card_attending_num"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="16dp"
                 android:layout_marginTop="5dp"
                 android:text="0000"
-                app:layout_constraintStart_toEndOf="@+id/textView13"
-                app:layout_constraintTop_toBottomOf="@+id/textView14" />
+                app:layout_constraintStart_toEndOf="@+id/admin_event_card_attending"
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_registered_num" />
 
             <TextView
-                android:id="@+id/textView16"
+                android:id="@+id/admin_event_card_event_description"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
                 android:text="Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed scelerisque dui dui, vitae dapibus est suscipit id. Donec ut luctus est, ac dignissim justo. Morbi nib.."
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView13" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_attending" />
 
             <TextView
-                android:id="@+id/textView19"
+                android:id="@+id/admin_event_card_organizer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="5dp"
                 android:text="Organized by: John Doe"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView16" />
+                app:layout_constraintTop_toBottomOf="@+id/admin_event_card_event_description" />
 
         </androidx.constraintlayout.widget.ConstraintLayout>
 
